open polling package to unnamed module for mokito test